Remove IndexAction.order